	db/source/driver/Postscript-Lanier.xml,
	db/source/driver/Postscript-Lexmark.xml,
	db/source/driver/Postscript-NRG.xml,
	db/source/driver/Postscript-Oce.xml,
	db/source/driver/Postscript-Oki.xml,
	db/source/driver/Postscript-Ricoh.xml,
	db/source/driver/Postscript-Samsung.xml,
	db/source/driver/Postscript-Savin.xml,
	db/source/driver/Postscript-Sharp.xml,
	db/source/driver/Postscript-Toshiba.xml: Added Snap Store link to
	PostScript Printer Application.

2021-10-05  Till Kamppeter <till.kamppeter@gmail.com>

	db/source/driver/gutenprint.xml: Added Snap Store link to
	Gutenprint Printer Application.

2021-10-05  Till Kamppeter <till.kamppeter@gmail.com>

	db/source/driver/hplip.xml: Added Snap Store link to HPLIP Printer
	Application and updated the comments and web site links.

2021-10-05  Till Kamppeter <till.kamppeter@gmail.com>

	db/source/driver/PDF-Gestetner.xml,
	db/source/driver/PDF-Infotec.xml,
	db/source/driver/PDF-Lanier.xml,
	db/source/driver/PDF-NRG.xml,
	db/source/driver/PDF-Ricoh.xml,
	db/source/driver/PDF-Savin.xml,
	db/source/driver/Postscript.xml,
	db/source/driver/Postscript1.xml,
	db/source/driver/ap3250.xml,
	db/source/driver/appledmp.xml,
	db/source/driver/bj10.xml,
	db/source/driver/bj10e.xml,
	db/source/driver/bj10v.xml,
	db/source/driver/bj10vh.xml,
	db/source/driver/bj200.xml,
	db/source/driver/bj8XXYYZ.upp.xml,
	db/source/driver/bjc250gs.xml,
	db/source/driver/bjc600.xml,
	db/source/driver/bjc800.xml,
	db/source/driver/bjc880j.xml,
	db/source/driver/c2050.xml,
	db/source/driver/cdj500.xml,
	db/source/driver/cdj550.xml,
	db/source/driver/cdnj500.xml,
	db/source/driver/chp2200.xml,
	db/source/driver/cjet.xml,
	db/source/driver/cljet5.xml,
	db/source/driver/cp50.xml,
	db/source/driver/declj250.xml,
	db/source/driver/deskjet.xml,
	db/source/driver/dj505j.xml,
	db/source/driver/djet500.xml,
	db/source/driver/dnj650c.xml,
	db/source/driver/eplaser-jp.xml,
	db/source/driver/eplaser.xml,
	db/source/driver/eps9high.xml,