@@ -52,6 +52,8 @@
   </execution>
   <comments>
     <en>
+      &lt;B&gt;All PPD files of this driver entry are available in the &lt;A href=&quot;https://github.com/OpenPrinting/ps-printer-app&quot;&gt;PostScript Printer Application&lt;/A&gt;&lt;/B&gt;&lt;P&gt;
+&lt;iframe src=&quot;https://snapcraft.io/ps-printer-app/embedded?button=black&amp;summary=true&quot; frameborder=&quot;0&quot; width=&quot;100%&quot; height=&quot;300px&quot; style=&quot;border: 1px solid #CCC; border-radius: 2px;&quot;&gt;&lt;/iframe&gt;
 
       Under this entry Oce's PPD files for their PostScript level 2
       printers are hosted. PostScript printers are supported natively
