@@ -18,7 +18,10 @@
 	db/source/driver/Postscript-Samsung.xml,
 	db/source/driver/Postscript-Savin.xml,
 	db/source/driver/Postscript-Sharp.xml,
-	db/source/driver/Postscript-Toshiba.xml: Added Snap Store link to
+	db/source/driver/Postscript-Toshiba.xml,
+	db/source/driver/PostscriptMono-Ricoh.xml,
+	db/source/driver/PostscriptColor-Ricoh.xml,
+	db/source/driver/Postscript2-Oce.xml: Added Snap Store link to
 	PostScript Printer Application.
 
 2021-10-05  Till Kamppeter <till.kamppeter@gmail.com>
